# fish-welfare

./: CHANGELOG.md  LICENSE  README.md  enough_data.ipynb  feature_engineering.ipynb  low_DO_analysis.ipynb  low_do_correlation.ipynb  open-meteo-24.ipynb  open-meteo.ipynb  openmeteo_docs.md  outlier_removal.ipynb  pond_locations_analysis.ipynb  pyproject.toml  village_gap_analysis.ipynb  village_water_qual.ipynb  water_qual_by_no_location.ipynb  water_qual_inferred_loc.ipynb  water_quality_analysis.ipynb
ModelSelection/: 001_source_descriptives.ipynb  01_source_target_data_alignment.ipynb  02_outcome_variable_comparison.ipynb  03_sampling_bias_characterisation.ipynb  04_transferable_feature_engineering.ipynb  05_seasonal_transferability.ipynb  06_overdispersion_and_correlation_structure.ipynb  07_prior_sensitivity_and_power_analysis.ipynb  08_cross_validation_design.ipynb  09_baseline_models.ipynb  10_hierarchical_bayesian_prototype.ipynb  11_refined_model.ipynb  transfer_learning_analysis_plan.md
ModelSelection/dec-jan/: 10_hierarchical_cv.ipynb  11_refined_cv.ipynb  nb10_cv_pooled_predictions.csv  nb10_cv_results.csv  nb11_cv_pooled_predictions.csv  nb11_cv_results.csv
data/: data_campaign.xlsx  dropouts.csv  enrolled_ponds_2026-02-02.csv  stocking_harvest.csv  water_quality.csv
docs/: data_dictionary.md  transfer_learning_methods_review.md
scripts/: process_data.py
transfer_kaggle/: 01_ponds_descriptive_stats.ipynb  02_ponds_data_descriptive_stats.ipynb  03_ponds1_descriptive_stats.ipynb
